Fixed H1 margin-bottom on mobile.

--- a/src/components/styles/_typography.scss
+++ b/src/components/styles/_typography.scss
@@ -119,7 +119,6 @@ h1,
     margin-bottom: var(--spacer6);
   }
   font-weight: var(--fontWeightBold);
-  margin-bottom: var(--spacer6);
   margin-top: 0;
 }
 h2,
